Revert "Fixed second scrollbar"
This reverts commit bc520b08faff394d8d66ddcf1aa66fc34bfe523b.

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -1407,7 +1407,7 @@ a.additional-player-stat:hover{
 
 #basic_stats{
     width: 100%;
-    padding: 30px 30px 40px 30px;
+    padding: 30px;
     box-sizing: border-box;
     background-color: rgba(0,0,0,0.3);
 }
